Naprawa strony do edycji flag

--- a/private/clean_db/config_file.ini
+++ b/private/clean_db/config_file.ini
@@ -1,6 +1,6 @@
 [file]
-name_in = /nlp/backup/inforex/inforex_2013-05-06_server.sql
-name_out = /nlp/backup/inforex/inforex-0.9.sql
+name_in = inforex_171025.sql
+name_out = inforex-master-171027.sql
 
 [db]
 username = root
