--- a/private/clean_db/config_file.ini
+++ b/private/clean_db/config_file.ini
@@ -1,6 +1,6 @@
 [file]
-name_in = inforex_171025.sql
-name_out = inforex-master-171027.sql
+name_in = inforex-in.sql
+name_out = inforex-out.sql
 
 [db]
 username = root
@@ -8,6 +8,3 @@ password = krasnal
 hostname = localhost
 port = 3306
 database = inforex_clear
-
-[save]
-corpus = 5
