--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,31 @@
 version: '2'
 services:    
-    site:
-      build: .
+    www:
+      build: ./docker/www
       ports :
        - "9080:80"
       links:
        - db
       volumes:
         - .:/home/inforex
-    php-myadmin:
+      depends_on:
+      - db
+    phpmyadmin:
       image: phpmyadmin/phpmyadmin
       ports:
        - "7080:80"
       depends_on:
        - db
+    liuqibase:
+      build: ./docker/liquibase
+      links:
+      - db
+      depends_on:
+      - db
+      volumes:
+      - ./database:/workdir/database
+      working_dir: /workdir
+      command: java -jar liquibase.jar --changeLogFile database/inforex-v1.0-changelog.sql update
     db:
       image: mysql:5.7
       ports:
