Table columns, base search

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ console/progress.txt
 console/ilp/local/*
 engine/templates_c/*
 engine/config.local.php
+engine/include/vendor
+config/config.local.php
 console/ilp/logic*
 secured_data/*
 .metadata/.plugins/
