--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,13 @@
-console/progress.txt
-console/ilp/local/*
 engine/templates_c/*
-engine/config.local.php
 engine/include/vendor
 config/config.local.php
-console/ilp/logic*
-secured_data/*
-.metadata/.plugins/
-.metadata/**
-
+docker/www/config/config.local.php
+secured_data/ccls
+secured_data/exports
+secured_data/images
+secured_data/import
 *~
 *.aux
 *.log
 *.backup
 *.swp
-nbproject/
-
-.idea
