--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,10 @@ services:
       links:
        - db
       volumes:
-        - .:/home/inforex
+        - ./public_html:/home/inforex/public_html
+        - ./engine:/home/inforex/engine
+        - ./docker/www/config:/home/inforex/config
+        - ./secured_data:/home/inforex/secured_data
       depends_on:
       - db
     phpmyadmin:
