--- a/docker/www/supervisor/supervisord.conf
+++ b/docker/www/supervisor/supervisord.conf
@@ -2,6 +2,7 @@
 nodaemon=true
 
 [program:apache2]
+startretries=10
 command=/bin/bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -DFOREGROUND"
 
 [program:inforex-tasks]
