final rpm cut, solving selinux context problem

--- a/packages/rpm/SOURCES/inforex.httpd.conf
+++ b/packages/rpm/SOURCES/inforex.httpd.conf
@@ -1,6 +1,6 @@
 # To offer inforex via Apache, add the following Alias
 # to your server's configuration
-# Alias /inforex "INFOREXDIR"
+# Alias /inforex "INFOREXDIR/public_html"
 
 <Directory "INFOREXDIR">
   Options None
