--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
 		]
     },
   "require": {
-    "ext-json": "*"
+    "ext-json": "*",
+    "ext-zip": "*"
   },
     "require-dev": {
         "phpunit/phpunit": "4.8.",
