--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,6 @@
     "ext-json": "*"
   },
     "require-dev": {
-        "phpunit/phpunit": "4.8.",
-        "phpunit/dbunit": "1.4.*"
+        "phpunit/phpunit": "^7"
     }
 }
