--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 		"classmap": [
             "engine/external/pear/",
 			"engine/include/",
-			"engine/config/",
+			"engine/Config/",
 			"engine/page/",
 			"engine/external/ChromePhp.php"
 		],
