--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "config": {
+	"platform": { "php": "7.4" },
         "vendor-dir": "engine/include/vendor"
     },
 
@@ -45,7 +46,6 @@
   },
     "require-dev": {
 	"firephp/firephp-core": "^0.5.3",
-        "phpunit/phpunit": "4.8.",
-        "phpunit/dbunit": "1.4.*"
+        "phpunit/phpunit": "^9.5"
     }
 }
