--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       working_dir: /workdir
       command: /bin/bash run.sh
     db:
-      image: mysql:5.7
+      image: mysql:8.0.30
       ports:
        - "3333:3306"
       environment:
@@ -42,8 +42,8 @@ services:
          MYSQL_USER: 'inforex'
          MYSQL_PASSWORD: 'password'
          MYSQL_DATABASE: 'inforex'
-      command: --sql_mode="STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
+      command: --sql_mode="STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION"
       volumes:
        - ./database/init:/docker-entrypoint-initdb.d
-       - ./docker/mysql/mysqld.cnf:/etc/mysql/mysql.conf.d/mysqld.cnf
+       - ./docker/mysql/mysqld.cnf:/etc/mysql/conf.d/inforex.cnf
       restart: always     
