--- a/docker/mysql/mysqld.cnf
+++ b/docker/mysql/mysqld.cnf
@@ -20,12 +20,12 @@
 # http://dev.mysql.com/doc/mysql/en/server-system-variables.html
 
 [mysqld]
-pid-file	= /var/run/mysqld/mysqld.pid
-socket		= /var/run/mysqld/mysqld.sock
-datadir		= /var/lib/mysql
+#pid-file	= /var/run/mysqld/mysqld.pid
+#$socket		= /var/run/mysqld/mysqld.sock
+#datadir		= /var/lib/mysql
 #log-error	= /var/log/mysql/error.log
 # By default we only accept connections from localhost
 #bind-address	= 127.0.0.1
-# Disabling symbolic-links is recommended to prevent assorted security risks
-symbolic-links=0
 max_allowed_packet=32M
+host_cache_size=0 
+
