new version of liquibase and mysql-connector

--- a/docker/liquibase/Dockerfile
+++ b/docker/liquibase/Dockerfile
@@ -5,12 +5,11 @@ WORKDIR /workdir
 RUN apt-get install unzip -y
 RUN apt-get update && apt-get install -y 
 
-RUN wget https://github.com/liquibase/liquibase/releases/download/liquibase-parent-3.5.5/liquibase-3.5.5-bin.tar.gz
-RUN tar -xvf liquibase-3.5.5-bin.tar.gz
+RUN wget https://github.com/liquibase/liquibase/releases/download/v4.15.0/liquibase-4.15.0.tar.gz
+RUN tar -xvf liquibase-4.15.0.tar.gz
 RUN chmod a+x liquibase
 
-RUN wget http://www.java2s.com/Code/JarDownload/mysql/mysql-connector-java-5.1.21.jar.zip
-RUN unzip mysql-connector-java-5.1.21.jar.zip
+RUN wget https://repo1.maven.org/maven2/mysql/mysql-connector-java/8.0.30/mysql-connector-java-8.0.30.jar
 
 COPY liquibase.properties /workdir
 COPY run.sh /workdir
