--- a/docker/liquibase/liquibase.properties
+++ b/docker/liquibase/liquibase.properties
@@ -1,5 +1,5 @@
-driver: com.mysql.jdbc.Driver
-classpath: mysql-connector-java-5.1.21.jar
+driver: com.mysql.cj.jdbc.Driver
+classpath: mysql-connector-java-8.0.30.jar
 url: jdbc:mysql://db/inforex
 username: inforex
 password: password
