--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
   },
     "require-dev": {
         "phpunit/phpunit": "4.8.",
-        "phpunit/dbunit": "1.4.*"
+        "phpunit/dbunit": "1.4.*",
+        "mikey179/vfsstream": "^1.6"
     }
 }
