--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "config": {
-	"platform": {"php":"5.6"},
-        "vendor-dir": "engine/include/vendor"
+	"platform": {"php":"5.6"}
     },
 
     "autoload": {
